# mqt-bench

./: .dockerignore  .flake8  .gitignore  .lgtm.yml  .license-tools-config.json  .pre-commit-config.yaml  .readthedocs.yaml  211210_backend_test.ipynb  CITATION.bib  Dockerfile  Evalutation.ipynb  LICENSE  MANIFEST.in  README.md  __init__.py  adding_url.ipynb  adjusted_database_parser.ipynb  ae.py  benchmark_generator.ipynb  benchmark_generator.py  citation.cff  config.json  config1.json  config2.json  config3.json  config4.json  daqc_bench_main.ipynb  generate_circuits.ipynb  ghz.py  graph_state.py  grover.py  noxfile.py  paper_figures.ipynb  plot_map.ipynb  pyproject.toml  qaoa.py  qft.py  qft_entangled.py  qpe_exact.py  requirements.txt  (+5 more)
.github/: codecov.yml  contributing.rst  dependabot.yml  release-drafter.yml  release_drafter.yml  renovate.json5  support.rst
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: black.yml  cd.yml  ci.yml  codecov.yml  codeql-analysis.yml  codeql.yml  coverage.yml  deploy.yml  docker.yml  mypy.yml  pregeneration.yml  publish-to-test-pypi.yml  pylint.yml  release-drafter.yml  server_deploy.yml  server_deployment.yml  test_pregenerated_zip.yml
archiv/: benchmark_generator.ipynb
benchmarks/: deutsch_jozsa.py  ghz.py  grover.py  hhl.py  iae.py  qaoa.py  qft.py  qft_entangled.py  qpe_inexact.py  shor.py  vqe.py
benchviewer/: README.md  __init__.py  main.py  requirements.txt
benchviewer/src/: backend.py
benchviewer/src/tests/: test_backend.py
benchviewer/static/files/: algo_level.txt
benchviewer/static/files/qasm_output/: ae_indep_10.qasm  ae_indep_100.qasm  ae_indep_101.qasm  ae_indep_102.qasm  ae_indep_103.qasm  ae_indep_104.qasm  ae_indep_105.qasm  ae_indep_106.qasm  ae_indep_107.qasm  ae_indep_108.qasm  ae_indep_109.qasm  ae_indep_11.qasm  ae_indep_110.qasm  ae_indep_111.qasm  ae_indep_112.qasm  ae_indep_113.qasm  ae_indep_114.qasm  ae_indep_115.qasm  ae_indep_116.qasm  ae_indep_117.qasm  ae_indep_118.qasm  ae_indep_119.qasm  (+36626 more)
benchviewer/templates/: benchmark_description.html  description.html  index.html  legal.html
docs/: Abstraction_levels.rst  Benchmark_selection.rst  DevelopmentGuide.rst  Parameter.rst  Quickstart.ipynb  References.rst  Support_Setup.rst  Usage.rst  conf.py  index.md  index.rst  refs.bib
docs/_templates/: page.html
docs/source/: Abstraction_levels.rst  Benchmark_selection.rst  DevelopmentGuide.rst  Parameter.rst  Publications.rst  Quickstart.ipynb  Quickstart.rst  Support_Setup.rst  Usage.rst  Webinterface.rst  conf.py  index.rst  refs.bib
evaluation/: pyproject.toml
evaluation/src/mqt/bench/evaluation/: __init__.py  evaluation.py  evaluation_visualization.ipynb
evaluation/tests/: test_evaluation.py
frontend/: pyproject.toml
frontend/src/mqt/bench/viewer/: __init__.py  backend.py  main.py
frontend/src/mqt/bench/viewer/templates/: index.html  legal.html
frontend/tests/: test_benchviewer.py  test_pregenerated_zip.py
mqt/bench/: __init__.py  benchmark_generator.py
mqt/bench/benchmarks/: ae.py  dj.py  ghz.py  graphstate.py  grover.py  hhl.py  qaoa.py  qft.py  qftentangled.py  qpeexact.py  qpeinexact.py  qwalk.py  realamprandom.py  shor.py  su2random.py  twolocalrandom.py  vqe.py  wstate.py
mqt/bench/tests/: test_all.py
mqt/bench/utils/: qiskit_helper.py  tket_helper.py  utils.py
mqt/benchviewer/: __init__.py  main.py  requirements.txt  wsgi.py
mqt/benchviewer/src/: backend.py
mqt/benchviewer/templates/: benchmark_description.html  description.html  index.html  legal.html
notebooks/: examples.ipynb
qasm_output/: QAOA_transpiled_4.qasm  QAOA_transpiled_mapped_4.qasm  ae_transpiled_5.qasm  ae_transpiled_mapped_5.qasm  ghz_transpiled_4.qasm  ghz_transpiled_mapped_4.qasm  graph_state_transpiled_4.qasm  graph_state_transpiled_mapped_4.qasm  grover_transpiled_4.qasm  grover_transpiled_mapped_4.qasm  iae_transpiled_5.qasm  iae_transpiled_mapped_5.qasm  qft_entangled_transpiled_4.qasm  qft_entangled_transpiled_mapped_4.qasm  qft_transpiled_4.qasm  qft_transpiled_mapped_4.qasm  qpe_exact_transpiled_4.qasm  qpe_exact_transpiled_mapped_4.qasm  qpe_inexact_transpiled_4.qasm  qpe_inexact_transpiled_mapped_4.qasm  shor_15_2_transpiled_.qasm  w_state_transpiled_4.qasm  w_state_transpiled_mapped_4.qasm
scripts/: ibm_csv_to_mqt_json.py  requirements.txt
src/: test_qc_generation.py  utils.py
src/benchmarks/: ae.py  canonical_ae.py  circuit_generator_algo_layer.py  deutsch_jozsa.py  dj.py  ghz.py  graph_state.py  graphstate.py  grover.py  hhl.py  qaoa.py  qft.py  qft_entangled.py  qftentangled.py  qpe_exact.py  qpe_inexact.py  qpeexact.py  qpeinexact.py  qwalk.py  shor.py  su2random.py  twolocalrandom.py  vqe.py  vqerandom.py  w_state.py  wstate.py
src/benchmarks/qiskit_application_finance/: iae.py  portfolio_optimization_qaoa.py  portfolio_optimization_vqe.py  portfolioqaoa.py  portfoliovqe.py  pricing_eur_call_opt.py  pricing_eur_put_opt.py  pricingcall.py  pricingput.py
src/benchmarks/qiskit_application_ml/: qgan.py  qnn.py
src/benchmarks/qiskit_application_nature/: excited_state.py  excitedstate.py  groundstate.py
src/benchmarks/qiskit_application_optimization/: routing.py  travelling_salesman.py  tsp.py  vehicle_routing.py
src/mqt/bench/: __init__.py  benchmark_generation.py  benchmark_generator.py  bqskit_helper.py  cli.py  config.json  evaluation.py  native_gates.py  output.py  qiskit_helper.py  tket_helper.py  utils.py
src/mqt/benchviewer/: __init__.py  backend.py  main.py
src/tests/: test_all.py
tests/: test_bench.py  test_benchmark_generation.py  test_benchviewer.py  test_cli.py  test_clifford+t.py  test_get_benchmark.py  test_pregenerated_zip.py  test_zip_streaming.py
tests/devices/: test_devices.py  test_ibm_device_support.py  test_ibm_free_access_device_support.py  test_ibm_open_access_device_support.py  test_ionq_device_support.py  test_iqm_device_support.py  test_oqc_device_support.py  test_quantinuum_device_support.py  test_rigetti_device_support.py
utils/: ibm_csv_to_mqt_json.py  ibm_csv_to_properties.py  requirements.txt
(+124 files in other folders)
